fix homepage overflow scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -622,13 +622,12 @@ audio {
 
 .slider-img {
   width: 100%;
-  height: 40%;
-
+  height: 100%;
   position: relative;
 }
 
 .carousel {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 60%;
 }
@@ -639,7 +638,6 @@ audio {
     border-width: 1px;
     border-color: black;
     background-color: #33495F;
-    z-index: 6;
     position: absolute;
     font-size: 35px;
     top: 15%;
